# AliSQL

./: .clang-format  .clang-tidy  .gitconfig  .gitignore  CMakeLists.txt  Doxyfile-ignored  Doxyfile.in  LICENSE  MYSQL_VERSION  README  README.md  build.sh  config.h.cmake  configure.cmake  run_doxygen.cmake
extra/xxhash/: CMakeLists.txt  my_xxhash.h
storage/duckdb/: CMakeLists.txt  ddl_convertor.cc  ddl_convertor.h  delta_appender.cc  delta_appender.h  dml_convertor.cc  dml_convertor.h  duckdb_select.cc  duckdb_select.h  duckdb_types.cc  duckdb_types.h  ha_duckdb.cc  ha_duckdb.h  row_mysql.h
unittest/: CMakeLists.txt
unittest/examples/: CMakeLists.txt  core-t.cc  mytime_client-t.cc  no_plan-t.cc  simple-t.cc  skip-t.cc  skip_all-t.cc  todo-t.cc
unittest/gunit/: .clang-tidy  CMakeLists.txt  alignment-t.cc  base_mock_field.h  base_mock_handler.h  benchmark.cc  benchmark.h  bgc_ticket_manager-t.cc  bitmap-t.cc  bounds_checked_array-t.cc  byteorder-t.cc  calloc-t.cc  character_set_deprecation-t.cc  charset_bug28956360-t.cc  charset_bug32788301-t.cc  collation_loader-t.cc  compare_access_paths-t.cc  connect_joins-t.cc  copy_info-t.cc  cost_estimate-t.cc  create_field-t.cc  dbug-t.cc  dd.h  dd_cache-t.cc  dd_column_statistics-t.cc  dd_info_schema_native_func-t.cc  dd_pfs-t.cc  dd_properties-t.cc  dd_schema-t.cc  dd_sdi-t.cc  dd_string_type-t.cc  dd_table-t.cc  debug_sync-t.cc  decimal-t.cc  decoy_user-t.cc  dns_srv_data-t.cc  dphyp-t.cc  dynarray-t.cc  explain_filename-t.cc  fake_costmodel.cc  (+198 more)
unittest/gunit/binlogevents/: CMakeLists.txt  gno_intervals-t.cc  grow_calculator-t.cc  gtid_set-t.cc  gtids-t.cc  heartbeat_codec-t.cc  managed_buffer-t.cc  managed_buffer_sequence-t.cc  payload_event_buffer_istream-t.cc  rw_buffer_sequence-t.cc  transaction_compression-t.cc  transaction_payload_codec-t.cc  transaction_payload_iterator-t.cc
unittest/gunit/changestreams/: CMakeLists.txt  cstreams_reader_state-t.cc  cstreams_reader_state_codec_pb-t.cc
unittest/gunit/components/keyring_common/: CMakeLists.txt  aes_encryption-t.cc  backend_mem.h  cache-t.cc  config_reader-t.cc  data-t.cc  data_file-t.cc  iterator-t.cc  json_data_file_operations-t.cc  json_data_reader-t.cc  json_data_writer-t.cc  operations-t.cc  parser-t.cc
unittest/gunit/components/mysql_server/: CMakeLists.txt  builtins_stubs.cc  cyclic_dependency_test_component_1.cc  cyclic_dependency_test_component_2.cc  dynamic_loader-t.cc  minimal_chassis-t.cc  minimal_chassis_test_driver-t.cc  reference_cache-t.cc  registry-t.cc  self_required_test_component.cc  test_reference_cache.cc  test_reference_cache.h  unit_test_common.cc  unit_test_common.h
unittest/gunit/containers/: CMakeLists.txt  integrals_lockfree_queue-t.cc
unittest/gunit/ddl_rewriter/: CMakeLists.txt  ddl_rewriter-t.cc
unittest/gunit/group_replication/: CMakeLists.txt  group_replication_compatibility_module-t.cc  group_replication_gcs_mysql_network_provider-t.cc  group_replication_member_info-t.cc  group_replication_member_version-t.cc  group_replication_mysql_version_gcs_protocol_map-t.cc
unittest/gunit/innodb/: CMakeLists.txt  example-t.cc  fil_path-t.cc  fts0fts-t.cc  fts0vlc-t.cc  ha_innodb-t.cc  log0log-t.cc  mem0mem-t.cc  os0file-t.cc  os0thread-create-t.cc  printf-t.cc  srv0conc-t.cc  sync0rw-t.cc  ut0bitset-t.cc  ut0crc32-t.cc  ut0lock_free_hash-t.cc  ut0math-t.cc  ut0mem-t.cc  ut0new-t.cc  ut0rbt-t.cc  ut0rnd-t.cc
unittest/gunit/innodb/lob/: CMakeLists.txt  buf0buf.h  buf0types.h  db0err.h  fil0fil.cc  fil0fil.h  fil0types.h  fut0fut.h  fut0lst.cc  fut0lst.h  lob0int.cc  lob0int.h  lot0buf.cc  lot0buf.h  lot0dat.cc  lot0dat.h  lot0fil.h  lot0lob.cc  lot0lob.h  lot0lot.cc  lot0lot.h  lot0plist.h  lot0types.h  mach0data.h  mtr0log.cc  mtr0log.h  mtr0types.h  page0page.h  trx0types.h  ut0byte.h  ut0dbg.cc  ut0dbg.h  ut0frags.cc  ut0plist.cc  ut0ut.h  zlob0int-t.cc  zlob0int.cc  zlob0int.h
unittest/gunit/keyring/: CMakeLists.txt  buffered_file_io-t.cc  buffered_file_io_10.cc  buffered_file_io_10.h  converter-t.cc  file_io-t.cc  keyring-api-t.cc  keys_container-t.cc  mock_logger.h  psi_memory_key.cc
unittest/gunit/libmysqlgcs/: CMakeLists.txt
unittest/gunit/libmysqlgcs/include/: gcs_base_test.h  test_logger.h
unittest/gunit/libmysqlgcs/interface/: gcs_message-t.cc  gcs_tagged_lock-t.cc
unittest/gunit/libmysqlgcs/xcom/: gcs_allowlist-t.cc  gcs_logging-t.cc  gcs_logging_system-t.cc  gcs_message_stage_fragmentation-t.cc  gcs_mpsc_queue-t.cc  gcs_msg_stages-t.cc  gcs_packet-t.cc  gcs_parameters-t.cc  gcs_xcom_communication_interface-t.cc  gcs_xcom_communication_protocol_changer-t.cc  gcs_xcom_control_interface-t.cc  gcs_xcom_expels_in_progress-t.cc  gcs_xcom_group_management-t.cc  gcs_xcom_group_member_information-t.cc  gcs_xcom_input_queue-t.cc  gcs_xcom_interface_unit-t.cc  gcs_xcom_network_provider-t.cc  gcs_xcom_network_provider_manager-t.cc  gcs_xcom_networking-t.cc  gcs_xcom_notification-t.cc  gcs_xcom_site_def-t.cc  gcs_xcom_state_exchange-t.cc  gcs_xcom_statistics_interface-t.cc  gcs_xcom_utils-t.cc  gcs_xcom_view_identifier-t.cc  gcs_xcom_xcom_base-t.cc  gcs_xcom_xcom_cache-t.cc  gcs_xcom_xcom_single_writer-t.cc  gcs_xcom_xcom_transport-t.cc
unittest/gunit/locks/: CMakeLists.txt  shared_spin_lock-t.cc
unittest/gunit/memory/: CMakeLists.txt  aligned_atomic-t.cc  ref_ptr-t.cc  unique_ptr-t.cc
unittest/gunit/temptable/: CMakeLists.txt  allocator-t.cc  allocator_helper.h  cell-t.cc  cell_calculator-t.cc  mock_field_varstring.h  result-t.cc  table_helper.h  temptable-handler-t.cc
unittest/gunit/xplugin/: CMakeLists.txt  test_main.cc
unittest/gunit/xplugin/xcl/: CMakeLists.txt  auth_chaining_t.cc  connection_general_t.cc  cyclic_buffer_t.cc  message_helpers.h  protocol_auth_t.cc  protocol_execute_t.cc  protocol_global_error_t.cc  protocol_notices_t.cc  protocol_send_recv_t.cc  protocol_t.h  query_t.cc  session_capability_t.cc  session_connect_t.cc  session_execute_t.cc  session_general_t.cc  session_negotiation_t.cc  session_options_t.cc  (+6 more)
unittest/mytap/: CMakeLists.txt  tap.cc  tap.h
unittest/mytap/t/: CMakeLists.txt  basic-t.cc
(+18051 files in other folders)
